--- a/src/styles.css
+++ b/src/styles.css
@@ -261,3 +261,10 @@ body,
   top: 6px;
   right: 6px;
 }
+
+.custom-object {
+  padding: 6px;
+  border-radius: 6px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.04);
+  cursor: grab;
+}
